static/css/style.css
* {
	margin: 0;
	padding: 0;
}

a {
	color:#0000EE;
	text-decoration: none;
}

.clear {
	clear: both;
}

body {
	background: #f5f5f5;
	font-size: 14px;
	font-family: 'Saira', monospace;
	min-height: 100vh;
	display: grid;
	grid-template-rows: 1fr auto;
	position: relative;
}

.button {
	background: #fff;
	color:#000;
	font-family: "Rajdhani";
	font-size: 16px;
	font-weight: 600;
	letter-spacing: 0.8px;
	text-transform: uppercase;
	padding: 12px 20px;
	border-radius: 12px;
}

.button-red {
	color:#fff;
	background: #e13838;
}

.button-darkblue {
	color:#fff;
	background: #444C5A;
}

.button-header {
	padding: 8px 15px;
}

#account {}

#account a {
	width: 30px;
	height: 30px;
	float: left;
	margin-left: 15px;
}

/* .account-button {
	float: left; 
	width: 30px;
	height: 30px;
	/* height: 36px;
	padding: 0px 3px 0px 10px; */
} */

/* .account-button a {
	color:#e13838;
}

.account-button svg {
	color:#e13838;
} */

#top-bg {
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	height: 800px;
	background-color: #fff0df;
	background-image: linear-gradient(0deg, #6d3bdb 10%, #fff0df 45%, #fff0df 100%);
	z-index: 0;
	opacity: 0.2;
}

#page {
	max-width: 960px;
	margin: auto;
}

.section {
	background: #f5f5f5;
	padding: 80px 40px;
	text-align: center;
	margin: auto;
}

.section-header {
	margin: auto;
	text-align: center;
	margin-bottom: 40px;
}

.section-title {
	font-size: 20px;
	font-weight: 600;
	font-family: "Rajdhani";
	letter-spacing: 0.5px;
	font-weight: 600;
	color:#df3f33;
	text-transform: uppercase;
	text-align: center;
	margin-bottom: 20px;
}

.section-small-title {
	font-family: "Rajdhani";
	font-size: 16px;
	letter-spacing: 0.8px;
	font-weight: 600;
	color:#505050;
	text-transform: uppercase;
	margin-bottom: 4%;
}

.section-description {
	font-size: 20px;
	margin-bottom: 8%;
}

.section-content {
	max-width: 900px;
	margin: auto;
}

.section-location {
	padding-bottom: 40px;
}

#header {
	width: 960px;
	line-height: 40px;
	margin: auto;
	display: flex;
	align-items: center;
	justify-content: space-between;
	position: relative;
	z-index: 20;
	padding: 20px 0px;
}

#header-left {
	float: left;
}

#header-right {
	height: 30px;
}

.header-section {
	width: 100%;
	box-sizing: border-box;
}

/* #header-right a {
	
} */

/* #header-right svg {
	float: left;
	width: 30px !important;
	height: 30px !important;
} */

#logo-icon {
	width: 40px;
	float: left;
	margin-right: 12px;
}

#logo-text {
	float: left;
	text-transform: uppercase;
	color: #000;
	font-size: 18px;
	letter-spacing: 1px;
	font-weight: 500;
	margin-right: 20px;
}

#top-navigation {}

#top-navigation a {
	float: left;
	color:#000;
	font-size: 15px;
	letter-spacing: 0.4px;
	font-weight: 500;
	text-transform: uppercase;
	margin: 0px 15px;
}

.top-navigation-link {
	color:#000;
	font-size: 15px;
	letter-spacing: 0.4px;
	font-weight: 500;
	text-transform: uppercase;
	margin: 0px 15px;
	float: left;
	cursor: pointer;
}

.popup-link {
	padding: 15px;
	display: block;
	box-sizing: border-box;
	text-align: center;
	float: none;
}

.mobile-navigation-holder {
	display: none;
}

.mobile-navigation-button {
	padding: 4px;
	border-radius: 10px;
}

.mobile-navigation-button:active {
	background: #e5e5e5;
}

.mobile-navigation-button div {
	width: 20px;
	height: 3px;
	border-radius: 3px;
	margin: 3px 0px;
	background: #000;
}

.mobile-navigation-popup {
	background: #f8f4f1;
	box-sizing: border-box;
	top: 0px;
	right: 10px;
	left: 10px;
	border-radius: 15px;
	position: absolute;
	z-index: 10;
	transform: scale(0.8);
	opacity: 0.5;
	z-index: -1;
	visibility: hidden;
	transition: all 0.2s;
	box-shadow: 0px 0px 1px rgba(0,0,0,0.04), 0px 0px 2px rgba(0,0,0,0.04), 0px 0px 3px rgba(0,0,0,0.02), 0px 0px 5px rgba(0,0,0,0.03), 0px 5px 10px rgba(0,0,0,0.1);
}

.mobile-navigation-popup svg {
	width: 24px;
	height: 24px;
	float: left;
	margin-top: 6px;
}

.mobile-navigation-popup-visible {
	transform: scale(1);
	top: 75px;
	opacity: 1;
	z-index: 10;
	visibility: visible;
}

.mobile-navigation-popup a {
	color:#000;
	font-weight: 500;
	text-transform: uppercase;
	padding: 14px 15px;
	display: block;
	box-sizing: border-box;
	text-align: center;
}

.hero-section {
	padding: 0px;
	padding-bottom: 100px;
	background-image: linear-gradient(0deg, #6d3bdb2e 10%, #f5f5f5 45%, #f5f5f5 100%);
	overflow: hidden;
}

#hero {
	max-width: 850px;
	margin: auto;
	text-align: center;
	padding: 70px 20px 60px 20px;
	position: relative;
}

#hero-content {
	position: relative;
	z-index: 2;
}

#hero-grid {
	display: grid;
	grid-template-columns: 1fr 1fr;
	grid-gap: 10px;
}

#hero-header {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

#hero-tagline {
	font-family: "Rajdhani";
	font-size: 16px;
	font-weight: 600;
	letter-spacing: 0.8px;
	padding: 3px 8px 2px 8px;
	border-radius: 6px;
	background: #ffffff;
	color: #516368;
	text-transform: uppercase;
	float: left;
	margin-bottom: 5px;
}

#hero-title {
	max-width: 850px;
	font-size: 74px;
	font-family: "Rajdhani";
	font-weight: 600;
	line-height: 1.2;
	color: #111;
	margin: auto;
	margin-bottom: 20px;
}

#hero-title-mobile {
	display: none;
	font-family: "Rajdhani";
	font-weight: 600;
	line-height: 1.2;
	font-size: 48px;
	color: #111;
	margin-bottom: 10px;
}

#hero-description {
	font-size: 22px;
	max-width: 650px;
	color:#222;
	margin: auto;
	padding: 0px 80px 50px 80px;
}

#hero-links {
	max-width: 560px;
	margin: auto;
	text-align: center;
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 10px;
}

#hero-links a {}

#hero-icon-bg {
	width: 680px;
	margin: auto;
	top: 0px;
	left: 0px;
	right: 0px;
	bottom: 0px;
	position: absolute;
	opacity: 0.04;
	z-index: 0;
}

#office-carousel {}

#office-carousel img {
	width: 100%;
	border-radius: 20px;
}

#intro {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	grid-gap: 20px;
}

.intro-section {
	padding-top: 0px;
	margin-top: 0px;
	padding-bottom: 0px;
}
/* ... */

